# ragster

./: .gitignore  app.py  app_llamaindex.py  pyproject.toml  requirements.txt  scrape.py
configs/: example config.yaml  lovdata_config.yaml  proff_config.yaml
data/: 21st.txt  lovdata.txt  proff-no.txt
notebooks/: test.ipynb
